--- a/blog/templates/blog/post_modale.html
+++ b/blog/templates/blog/post_modale.html
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="modal-body">
-                        {% include 'blog/postcomments.html' %}
+                        {% include 'blog/post_comments_base.html' %}
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
