--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -42,7 +42,7 @@
                 <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
                     <a class="btn btn-primary d-block" href="{% url 'blog:add_comment_to_post' pk=post.pk %}">Add comment</a>
                 </div>
-                {% include 'blog/postcomments.html' %}
+                {% include 'blog/post_comments_base.html' %}
             </div>
 
         </div>
