--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -41,7 +41,7 @@
 {% endblock content_main %}
 
 {% block pagination %}
-    <nav class="blog-pagination mb-2">
+    <nav class="blog-pagination">
         <div class="pagination">
             <span class="step-links">
                 {% if page_obj.has_previous %}
