--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -155,7 +155,7 @@
         </div>
     </div>
 
-    <main role="main" class="container-fluid">
+    <main role="main" class="container-fluid mb-2">
         <div class="row">
             <div class="col-xl-9 col-md-8">
 
@@ -212,7 +212,7 @@
                     </ol>
                 </div>
 
-                <div class="p-4 mb-2 rounded border border-secondary shadow">
+                <div class="p-4 rounded border border-secondary shadow">
                     <h4 class="font-italic">Search</h4>
                     <form action="{% url 'blog:search_results' %}" method="get">
                         <div class="input-group mb-2">
