--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -65,7 +65,7 @@
 
 {% block pagination %}
 
-    <nav class="blog-pagination mb-2">
+    <nav class="blog-pagination">
         <div class="pagination">
             <span class="step-links">
                 {% if page_obj.has_previous %}
