--- a/khoBlog/static/css/blog.css
+++ b/khoBlog/static/css/blog.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #444749;
@@ -7,6 +8,361 @@
   .pr-kho-lg-15 {
     padding-right: 15px;
   }
+}
+
+.linkHome img {
+  opacity: 1;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  width: 50px;
+}
+
+.linkHome.isHome {
+  pointer-events: none;
+  cursor: default;
+}
+
+.superuser {
+  color: red;
+  font-weight: bold;
+}
+
+.staff {
+  color: gold;
+  font-weight: bold;
+}
+
+.card-body .todo-completed,
+.todo .todo-completed {
+  text-decoration: line-through;
+  background-color: #222;
+  padding: 16px !important;
+  border-bottom: none;
+}
+
+.card-body .todoTodo,
+.todo .todoTodo {
+  padding: 16px !important;
+}
+
+.card-body .card-text,
+.todo .card-text {
+  -webkit-font-variant-ligatures: common-ligatures;
+          font-variant-ligatures: common-ligatures;
+}
+
+.card-body .card-text ol,
+.card-body .card-text ul,
+.todo .card-text ol,
+.todo .card-text ul {
+  padding: 0 32px;
+}
+
+.card-body .card-text ol li,
+.card-body .card-text ul li,
+.todo .card-text ol li,
+.todo .card-text ul li {
+  border: none;
+}
+
+.card-body .card-text img,
+.todo .card-text img {
+  max-width: 100%;
+}
+
+.card-body .card-text .highlight,
+.todo .card-text .highlight {
+  display: block;
+  -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 16px;
+  padding: 0.01em 16px;
+  overflow-x: auto !important;
+  resize: both;
+}
+
+.card-body .card-text .highlight .lineno,
+.todo .card-text .highlight .lineno {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.card-body .card-text dt,
+.todo .card-text dt {
+  font-weight: 700;
+}
+
+.card-body .card-text dd,
+.todo .card-text dd {
+  margin: 0 0 0 16px;
+}
+
+.card-body .card-text .emojione,
+.todo .card-text .emojione {
+  width: 18px;
+}
+
+.card-body .card-text blockquote,
+.todo .card-text blockquote {
+  padding-left: 1.5em;
+  border-left: 5px solid rgba(0, 0, 0, 0.1);
+  margin: 1.2em 0;
+  color: rgba(255, 255, 255, 0.4);
+  border-left-color: rgba(255, 255, 255, 0.1);
+}
+
+.card-body .card-text blockquote dt,
+.todo .card-text blockquote dt {
+  font-weight: 700;
+}
+
+.card-body .card-text blockquote dd,
+.todo .card-text blockquote dd {
+  margin: 0 0 0 16px;
+}
+
+.card-body .card-text code,
+.card-body .card-text pre,
+.card-body .card-text samp,
+.todo .card-text code,
+.todo .card-text pre,
+.todo .card-text samp {
+  font-family: Roboto Mono, Lucida Sans Typewriter, Lucida Console, monaco, Courrier, monospace;
+  font-size: 0.85em;
+}
+
+.card-body .card-text code *,
+.card-body .card-text pre *,
+.card-body .card-text samp *,
+.todo .card-text code *,
+.todo .card-text pre *,
+.todo .card-text samp * {
+  font-size: inherit;
+}
+
+.card-body .card-text mark,
+.todo .card-text mark {
+  background-color: #f3b700;
+  border-radius: 0.5rem !important;
+}
+
+.card-body .card-text kbd,
+.todo .card-text kbd {
+  font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+  background-color: #fff;
+  border: 1px solid rgba(63, 63, 63, 0.25);
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 0 rgba(63, 63, 63, 0.25);
+          box-shadow: 0 1px 0 rgba(63, 63, 63, 0.25);
+  color: #333;
+  display: inline-block;
+  font-size: 0.8em;
+  margin: 0 0.1em;
+  padding: 0.1em 0.6em;
+  white-space: nowrap;
+}
+
+.card-body .card-text abbr[title],
+.todo .card-text abbr[title] {
+  border-bottom: 1px dotted #777;
+  cursor: help;
+}
+
+.card-body .card-text .task-list-item,
+.todo .card-text .task-list-item {
+  list-style-type: none;
+}
+
+.card-body .card-text .task-list-item-checkbox,
+.todo .card-text .task-list-item-checkbox {
+  margin: 0 0.2em 0 -1.3em;
+}
+
+.card-body .card-text .footnote,
+.todo .card-text .footnote {
+  position: relative;
+  top: -0.25em;
+  vertical-align: top;
+}
+
+.card-body .card-text .page-break-after,
+.todo .card-text .page-break-after {
+  page-break-after: always;
+}
+
+.card-body .card-text .abc-notation-block,
+.todo .card-text .abc-notation-block {
+  overflow-x: auto !important;
+}
+
+.card-body .markdownx-preview,
+.todo .markdownx-preview {
+  margin-top: 1.2em !important;
+  border-top: 4px #333 solid !important;
+}
+
+.card-body hr,
+.todo hr {
+  border: 0;
+  border-top: 1px solid rgba(128, 128, 128, 0.33);
+  margin: 2em 0;
+}
+
+.tabbed-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.tabbed-set .tabbed-content {
+  display: none;
+  -webkit-box-ordinal-group: 100;
+      -ms-flex-order: 99;
+          order: 99;
+  width: 100%;
+}
+
+.tabbed-set label {
+  width: auto;
+  margin: 0 0.5em;
+  padding: 0.25em;
+  font-size: 120%;
+  cursor: pointer;
+}
+
+.tabbed-set input {
+  position: absolute;
+  opacity: 0;
+}
+
+.tabbed-set input:nth-child(n + 1) {
+  color: #333333;
+}
+
+.tabbed-set input:nth-child(n + 1):checked + label {
+  color: #ff5252;
+}
+
+.tabbed-set input:nth-child(n + 1):checked + label + .tabbed-content {
+  display: block;
+}
+
+.progress-label {
+  position: absolute;
+  text-align: center;
+  font-weight: 700;
+  width: 100%;
+  margin: 0;
+  line-height: 1.2rem;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.progress-bar {
+  height: 1.2rem;
+  float: left;
+  background-color: #2979ff;
+}
+
+.progress {
+  display: block;
+  width: 100%;
+  margin: 0.5rem 0;
+  height: 1.2rem;
+  background-color: #eeeeee;
+  position: relative;
+}
+
+.progress.thin {
+  margin-top: 0.9rem;
+  height: 0.4rem;
+}
+
+.progress.thin .progress-label {
+  margin-top: -0.4rem;
+}
+
+.progress.thin .progress-bar {
+  height: 0.4rem;
+}
+
+.progress-100plus .progress-bar {
+  background-color: #00e676;
+}
+
+.progress-80plus .progress-bar {
+  background-color: #fbc02d;
+}
+
+.progress-60plus .progress-bar {
+  background-color: #ff9100;
+}
+
+.progress-40plus .progress-bar {
+  background-color: #ff5252;
+}
+
+.progress-20plus .progress-bar {
+  background-color: #ff1744;
+}
+
+.progress-0plus .progress-bar {
+  background-color: #f50057;
+}
+
+.task-list-item {
+  list-style-type: none !important;
+}
+
+.task-list-item input[type='checkbox'] {
+  margin: 0 4px 0.25em -20px;
+  vertical-align: middle;
+}
+
+.task-list-control {
+  display: inline;
+  /* Ensure label is inline incase theme sets it to block.*/
+}
+
+.task-list-control {
+  position: relative;
+  display: inline-block;
+  color: #555;
+  cursor: pointer;
+}
+
+.task-list-control input[type='checkbox'] {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  /* Put the input behind the label so it doesn't overlay text */
+}
+
+.task-list-indicator {
+  position: absolute;
+  top: -8px;
+  left: -18px;
+  display: block;
+  width: 14px;
+  height: 14px;
+  color: #eee;
+  background-color: #eee;
+  border-radius: 0.25rem;
+}
+
+.task-list-control input[type='checkbox']:checked + .task-list-indicator::before {
+  display: block;
+  margin-top: -4px;
+  margin-left: 2px;
+  font-size: 16px;
+  line-height: 1;
+  content: '✔';
+  color: #1ebb52;
 }
 
 .blog-header p {
