--- a/khoBlog/static/css/blog.scss
+++ b/khoBlog/static/css/blog.scss
@@ -11,6 +11,320 @@
     }
 }
 
+.linkHome img {
+    opacity: 1;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    width: 50px;
+}
+
+.linkHome.isHome {
+    pointer-events: none;
+    cursor: default;
+}
+
+.superuser {
+    color: red;
+    font-weight: bold;
+}
+
+.staff {
+    color: gold;
+    font-weight: bold;
+}
+
+.card-body,
+.todo {
+    & .todo-completed {
+        text-decoration: line-through;
+        background-color: #222;
+        padding: 16px !important;
+        border-bottom: none;
+    }
+
+    & .todoTodo {
+        padding: 16px !important;
+    }
+
+    & .card-text {
+        font-variant-ligatures: common-ligatures;
+
+        & ol,
+        ul {
+            padding: 0 32px;
+
+            & li {
+                border: none;
+            }
+        }
+
+        & img {
+            max-width: 100%;
+        }
+
+        & .highlight {
+            display: block;
+            box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+            margin-bottom: 16px;
+            padding: 0.01em 16px;
+            overflow-x: auto !important;
+            resize: both;
+
+            & .lineno {
+                user-select: none;
+            }
+        }
+
+        & dt {
+            font-weight: 700;
+        }
+
+        & dd {
+            margin: 0 0 0 16px;
+        }
+
+        & .emojione {
+            width: 18px;
+        }
+
+        & blockquote {
+            padding-left: 1.5em;
+            border-left: 5px solid rgba(0, 0, 0, 0.1);
+            margin: 1.2em 0;
+            color: hsla(0, 0%, 100%, 0.4);
+            border-left-color: hsla(0, 0%, 100%, 0.1);
+
+            & dt {
+                font-weight: 700;
+            }
+
+            & dd {
+                margin: 0 0 0 16px;
+            }
+        }
+
+        code,
+        pre,
+        samp {
+            font-family: Roboto Mono, Lucida Sans Typewriter, Lucida Console, monaco, Courrier, monospace;
+            font-size: 0.85em;
+        }
+
+        code *,
+        pre *,
+        samp * {
+            font-size: inherit;
+        }
+
+        mark {
+            background-color: #f3b700;
+            border-radius: 0.5rem !important;
+        }
+
+        kbd {
+            font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+            background-color: #fff;
+            border: 1px solid rgba(63, 63, 63, 0.25);
+            border-radius: 3px;
+            box-shadow: 0 1px 0 rgba(63, 63, 63, 0.25);
+            color: #333;
+            display: inline-block;
+            font-size: 0.8em;
+            margin: 0 0.1em;
+            padding: 0.1em 0.6em;
+            white-space: nowrap;
+        }
+
+        abbr[title] {
+            border-bottom: 1px dotted #777;
+            cursor: help;
+        }
+
+        .task-list-item {
+            list-style-type: none;
+        }
+
+        .task-list-item-checkbox {
+            margin: 0 0.2em 0 -1.3em;
+        }
+
+        .footnote {
+            position: relative;
+            top: -0.25em;
+            vertical-align: top;
+        }
+
+        .page-break-after {
+            page-break-after: always;
+        }
+
+        .abc-notation-block {
+            overflow-x: auto !important;
+        }
+    }
+
+    & .markdownx-preview {
+        margin-top: 1.2em !important;
+        border-top: 4px #333 solid !important;
+    }
+
+    & hr {
+        border: 0;
+        border-top: 1px solid hsla(0, 0%, 50%, 0.33);
+        margin: 2em 0;
+    }
+}
+
+.tabbed-set {
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.tabbed-set .tabbed-content {
+    display: none;
+    order: 99;
+    width: 100%;
+}
+
+.tabbed-set label {
+    width: auto;
+    margin: 0 0.5em;
+    padding: 0.25em;
+    font-size: 120%;
+    cursor: pointer;
+}
+
+.tabbed-set input {
+    position: absolute;
+    opacity: 0;
+}
+
+.tabbed-set input:nth-child(n + 1) {
+    color: #333333;
+}
+
+.tabbed-set input:nth-child(n + 1):checked + label {
+    color: #ff5252;
+}
+
+.tabbed-set input:nth-child(n + 1):checked + label + .tabbed-content {
+    display: block;
+}
+
+.progress-label {
+    position: absolute;
+    text-align: center;
+    font-weight: 700;
+    width: 100%;
+    margin: 0;
+    line-height: 1.2rem;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.progress-bar {
+    height: 1.2rem;
+    float: left;
+    background-color: #2979ff;
+}
+
+.progress {
+    display: block;
+    width: 100%;
+    margin: 0.5rem 0;
+    height: 1.2rem;
+    background-color: #eeeeee;
+    position: relative;
+}
+
+.progress.thin {
+    margin-top: 0.9rem;
+    height: 0.4rem;
+}
+
+.progress.thin .progress-label {
+    margin-top: -0.4rem;
+}
+
+.progress.thin .progress-bar {
+    height: 0.4rem;
+}
+
+.progress-100plus .progress-bar {
+    background-color: #00e676;
+}
+
+.progress-80plus .progress-bar {
+    background-color: #fbc02d;
+}
+
+.progress-60plus .progress-bar {
+    background-color: #ff9100;
+}
+
+.progress-40plus .progress-bar {
+    background-color: #ff5252;
+}
+
+.progress-20plus .progress-bar {
+    background-color: #ff1744;
+}
+
+.progress-0plus .progress-bar {
+    background-color: #f50057;
+}
+
+.task-list-item {
+    list-style-type: none !important;
+}
+
+.task-list-item input[type='checkbox'] {
+    margin: 0 4px 0.25em -20px;
+    vertical-align: middle;
+}
+
+.task-list-control {
+    display: inline;
+    /* Ensure label is inline incase theme sets it to block.*/
+}
+
+.task-list-control {
+    position: relative;
+    display: inline-block;
+    color: #555;
+    cursor: pointer;
+}
+
+.task-list-control input[type='checkbox'] {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+    /* Put the input behind the label so it doesn't overlay text */
+}
+
+.task-list-indicator {
+    position: absolute;
+    top: -8px;
+    left: -18px;
+    display: block;
+    width: 14px;
+    height: 14px;
+    color: #eee;
+    background-color: #eee;
+    border-radius: 0.25rem;
+}
+
+.task-list-control input[type='checkbox']:checked + .task-list-indicator::before {
+    display: block;
+    margin-top: -4px;
+    margin-left: 2px;
+    font-size: 16px;
+    line-height: 1;
+    content: '✔';
+    color: #1ebb52;
+}
+
 .blog-header p {
     margin-bottom: 0;
 }
