--- a/khoBlog/static/css/blog.scss
+++ b/khoBlog/static/css/blog.scss
@@ -11,6 +11,11 @@
     }
 }
 
+#id_body {
+    background-color: $palette_dark;
+    color: #f8f9fa;
+}
+
 .linkHome img {
     opacity: 1;
     -webkit-transition: 0.3s ease-in-out;
