--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -86,7 +86,7 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <link rel="alternate" type="application/json+oembed" href="https://blog.khodok.xyz/static/js/oembed/oembed.json"
+    <link rel="alternate" type="application/json+oembed" href="{% static 'js/oembed/oembed.json' %}"
           title="oEmbed Profile: JSON">
 
     <title>
