--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -35,29 +35,6 @@
             f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-ND43ZGJ');</script>
         <!-- End Google Tag Manager -->
-
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
-
-        <!-- TODO: Add SDKs for Firebase products that you want to use
-            https://firebase.google.com/docs/web/setup#available-libraries -->
-
-        <script>
-            // Your web app's Firebase configuration
-            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-            var firebaseConfig = {
-                apiKey: "AIzaSyDo47xBD-VL4bN9JT_efi9u_lsYGys8pFQ",
-                authDomain: "django-khodok.firebaseapp.com",
-                databaseURL: "https://django-khodok.firebaseio.com",
-                projectId: "django-khodok",
-                storageBucket: "django-khodok.appspot.com",
-                messagingSenderId: "555741128855",
-                appId: "1:555741128855:web:aecc0210cffd7bc1b3a1d2",
-                measurementId: "G-9K7CK18BG6"
-            };
-            // Initialize Firebase
-            firebase.initializeApp(firebaseConfig);
-        </script>
     {% endif %}
 
     <meta charset="UTF-8"/>
@@ -252,5 +229,15 @@
 
 <!-- rel! js -->
 <script src="{% static 'js/scripts/dynamic.js' %}"></script>
+
+{% if not debug_flag %}
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.4/firebase-analytics.js"></script>
+
+    <script defer src="{% static 'js/firebase/init-firebase.js' %}"></script>
+{% endif %}
 </body>
 </html>
