--- a/khoBlog/templates/includes/auth.html
+++ b/khoBlog/templates/includes/auth.html
@@ -24,8 +24,8 @@
 
     {% if user.is_superuser or user.is_staff %}
         <div class="btn-group-vertical d-block" role="group" aria-label="Group Admin">
-            <a class="mb-0 btn btn-danger" href="{% url 'admin:index' %}">Admin</a>
-            {% if user.is_superuser %}<a class="mb-0 btn btn-danger" href="https://eu.pythonanywhere.com">Pythonanywhere</a>{% endif %}
+            <a class="mb-0 btn btn-danger text-white" href="{% url 'admin:index' %}">Admin</a>
+            {% if user.is_superuser %}<a class="mb-0 btn btn-danger text-white" href="https://eu.pythonanywhere.com">Pythonanywhere</a>{% endif %}
         </div>
     {% endif %}
 
