--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -10,7 +10,7 @@
         {% if project.featured %}
             <div class="p-5 border rounded border-secondary bg-dark mb-2 shadow">
                 <div class="container">
-                    <strong class="d-inline-block mb-2 text-uppercase font-italic">Featured Post</strong>
+                    <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
                     <h1 class="display-4">{{ project.title }}</h1>
                     <p class="lead">{{ project.snippet }}</p>
                     <a href="{{ project.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
