--- a/blog/templates/blog/featured_posts.html
+++ b/blog/templates/blog/featured_posts.html
@@ -3,7 +3,7 @@
 {% for post in featured_big %}
     <div class="p-5 border rounded border-secondary bg-dark mb-2 shadow">
         <div class="container">
-            <strong class="d-inline-block mb-2 text-uppercase font-italic">Featured Post</strong>
+            <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
             <h1 class="display-4">{% if post.featured_title %} {{ post.featured_title }} {% else %} {{ post.title }} {% endif %}</h1>
             <p class="lead">{{ post.description }}</p>
             <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
